@@ -67,24 +67,6 @@ extern "C" {
     ? fiid_obj_field_len_bytes (tmpl_hdr_session_auth, (uint8_t *)"auth_code") : 0) +  \
    fiid_obj_field_len_bytes (tmpl_hdr_session_auth, (uint8_t *)"ipmi_msg_len"))
 
-#define IPMI_LAN_PKT_RQ_CHKSUM2_BLOCK_INDX(auth_type)                       \
-  (fiid_obj_len_bytes (tmpl_hdr_rmcp) +                                     \
-   fiid_obj_field_len_bytes (tmpl_hdr_session_auth, (uint8_t *)"auth_type") +          \
-   fiid_obj_field_len_bytes (tmpl_hdr_session_auth, (uint8_t *)"session_seq_num") +    \
-   fiid_obj_field_len_bytes (tmpl_hdr_session_auth, (uint8_t *)"session_id") +         \
-   ((auth_type == IPMI_SESSION_AUTH_TYPE_MD2                                \
-     || auth_type == IPMI_SESSION_AUTH_TYPE_MD5                             \
-     || auth_type == IPMI_SESSION_AUTH_TYPE_STRAIGHT_PASSWD_KEY             \
-     || auth_type == IPMI_SESSION_AUTH_TYPE_OEM_PROP)                       \
-    ? fiid_obj_field_len_bytes (tmpl_hdr_session_auth, (uint8_t *)"auth_code") : 0) +  \
-   fiid_obj_field_len_bytes (tmpl_hdr_session_auth, (uint8_t *)"ipmi_msg_len") +       \
-   fiid_obj_field_end_bytes (tmpl_lan_msg_hdr_rq, (uint8_t *)"chksum1"))
-
-#define IPMI_LAN_PKT_RQ_CHKSUM2_BLOCK_LEN(tmpl_cmd)            \
-  (fiid_obj_len_bytes (tmpl_lan_msg_hdr_rq) -                  \
-   fiid_obj_field_end_bytes (tmpl_lan_msg_hdr_rq, (uint8_t *)"chksum1") + \
-   fiid_obj_len_bytes (tmpl_cmd)) 
-   
 #define IPMI_LAN_PKT_RS_CHKSUM1_BLOCK_LEN                      \
   fiid_obj_field_start_bytes (tmpl_lan_msg_hdr_rs, (uint8_t *)"chksum1")
 
@@ -118,10 +100,8 @@ int8_t fill_lan_msg_hdr (uint8_t net_fn,
 
 int32_t assemble_ipmi_lan_pkt (fiid_obj_t obj_hdr_rmcp, 
 			       fiid_obj_t obj_hdr_session, 
-			       fiid_template_t tmpl_hdr_session, 
 			       fiid_obj_t obj_msg_hdr, 
 			       fiid_obj_t obj_cmd, 
-			       fiid_template_t tmpl_cmd, 
 			       uint8_t *pkt, 
 			       uint32_t pkt_len);
 
