@@ -15,6 +15,15 @@
 	
 ------------------------------------------------------------
 
+2006-01-25  Albert Chu <chu11@llnl.gov>	
+
+	* libfreeipmi/src/ipmi-lan-interface.h,
+	libfreeipmi/src/ipmi-lan-interface.c (assemble_ipmi_lan_pkt):
+	Continue reimplementation.
+
+	* libfreeipmi/src/fiid.c (fiid_obj_get_data, fiid_obj_get_all,
+	fiid_obj_get_block): Use errno EMSGSIZE when appropriate.
+	
 2006-01-24  Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/src/fiid.c: Various minor bug fixes and typo fixes.
@@ -22,6 +31,7 @@
 	* Makefile.am, rmcpping/: Begin support of rmcpping.
 
 	* libfreeipmi/src/ipmi-debug.c (fiid_obj_dump_lan),
+	libfreeipmi/src/ipmi-sessions.h (fill_hdr_session),
 	libfreeipmi/src/ipmi-sessions.c (fill_hdr_session),
 	libfreeipmi/src/ipmi-lan-interface.c (fill_lan_msg_hdr),
 	libfreeipmi/src/ipmi-msg-support-cmds.c
